# DCReg

./: README.md
DCReg/: CMakeLists.txt
DCReg/config/: icp.yaml  icp_iter.yaml  icp_pk01.yaml
DCReg/dataset/icp_results/: FCN-SR_aligned_clouds.pcd  FCN-SR_aligned_clouds_sig.pcd  ME-SR_aligned_clouds.pcd  ME-SR_aligned_clouds_sig.pcd  ME-TReg_aligned_clouds.pcd  ME-TReg_aligned_clouds_sig.pcd  ME-TSVD_aligned_clouds.pcd  ME-TSVD_aligned_clouds_sig.pcd  XICP_aligned_clouds.pcd  XICP_aligned_clouds_sig.pcd  all_results.csv  complete_log.txt  condition_numbers_detailed.csv  degeneracy_analysis_first_iter.txt  degeneracy_analysis_last_iter.txt  initial_clouds.pcd  iteration_details_with_dx.csv  iteration_history.csv  statistics_summary.txt  transform_details.csv
DCReg/include/: dcreg.hpp  hessian_computer.h  icp_test_runner.h  math_utils.hpp  superloc.h  utils.hpp  xicp.h
DCReg/scripts/: e57_to_pcd_converter.py  get_gtpose.py  gt_pose_in_icp_frame_1698490984.txt
DCReg/src/: icp_main.cpp  icp_test_runner.cpp  superloc.cpp  xicp.cpp
results/ablation_study/: README.MD
results/ablation_study/dcreg_full/: data_time.txt
results/ablation_study/hybrid_analysis/dcreg+sr/: data_time.txt  map_results.txt
results/ablation_study/hybrid_analysis/dcreg+tsvd/: map_results.txt  optimized_poses_tum.txt
results/ablation_study/no_handling(base)/: data_time.txt  map_results.txt
results/ablation_study/no_pcg(det. only)/: map_results.txt  optimized_poses_tum.txt
results/ablation_study/no_preconditioing(Det.+CG)/: data_time.txt
results/long_duration experiments/fig12-14_fig16/: degeneracy_detection_visualization.py
results/long_duration experiments/fig17/: icp_hessian_eigenvalues_plot.py
results/long_duration experiments/fig18/: Parkinglot-2023-10-28-18-59-01_0.005_ins_tum.txt  optimized_poses_tum.txt  optimized_poses_tum_qr.txt
results/long_duration experiments/fig18_dcreg vs dcreg-sr/: README.MD  pcg.txt  pcg_visulization_with_traj.py
results/long_duration experiments/fig19_parameter_analysis/: parameter_analysis.py
results/long_duration experiments/fig19_parameter_analysis/1.0/: map_results.txt  optimized_poses_tum.txt  pcg.txt
results/long_duration experiments/fig19_parameter_analysis/10/: map_results.txt  optimized_poses_tum.txt  pcg.txt
results/long_duration experiments/fig19_parameter_analysis/100/: map_results.txt  optimized_poses_tum.txt  pcg.txt
results/long_duration experiments/fig19_parameter_analysis/2.0/: map_results.txt  optimized_poses_tum.txt  pcg.txt
results/long_duration experiments/fig19_parameter_analysis/20/: map_results.txt  optimized_poses_tum.txt  pcg.txt
results/long_duration experiments/fig19_parameter_analysis/5.0/: map_results.txt  optimized_poses_tum.txt  pcg.txt
results/long_duration experiments/fig19_parameter_analysis/50/: map_results.txt  optimized_poses_tum.txt  pcg.txt
results/long_duration experiments/table3_4/cave02/: cave02_gt.txt
results/long_duration experiments/table3_4/stairs/: stairs_bob.txt
results/long_duration experiments/table6_time_cost/10m/: data_time.txt  optimized_poses_tum.txt
results/long_duration experiments/table6_time_cost/20m/: data_time.txt  optimized_poses_tum.txt
results/simulation/: ME-TReg_aligned_clouds.pcd  ME-TSVD_aligned_clouds.pcd  all_results.csv  complete_log.txt  condition_numbers_detailed.csv  degeneracy_analysis_last_iter.txt  initial_clouds.pcd  iteration_details_with_dx.csv  iteration_history.csv  target_clouds.pcd  transform_details.csv
results/simulation/fig8_5000iters/: all_results.csv  complete_log.txt  degeneracy_analysis_first_iter.txt  degeneracy_analysis_last_iter.txt  iteration_history.csv  statistics_summary.txt  transform_details.csv
results/simulation/table3_fig9_fig10/: FCN-SR_aligned_clouds.pcd  FCN-SR_aligned_clouds_sig.pcd  ME-SR_aligned_clouds.pcd  ME-SR_aligned_clouds_sig.pcd  ME-TReg_aligned_clouds_sig.pcd  ME-TSVD_aligned_clouds_sig.pcd  Ours_aligned_clouds.pcd  Ours_aligned_clouds_sig.pcd  XICP_aligned_clouds.pcd  XICP_aligned_clouds_sig.pcd  degeneracy_analysis_first_iter.txt  statistics_summary.txt
scripts/: README.md  get_gtpose.py
(+93 files in other folders)
